# pemm-assessment-scoring

./: .gitignore  LICENSE  Procfile  README.md  SCORING_PLAN.md  build.sh  google_auth.py  main.py  pyproject.toml  scoring.py  sheets_util.py  view_sheet_tabs_cli.py
.devcontainer/: devcontainer.json
docs/prompts/: roo_task_jun-3-2025_2-10-31-pm.md
sample_data/: Question-set.csv  respones.csv
