[tool.poetry]
name = "template-python-buildpack"
version = "0.1.0"
description = ""
authors = ["David Stenglein <dave@missingmass.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
art = "^6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
