[tool.poetry]
name = "template-python-buildpack"
version = "0.1.0"
description = ""
authors = ["David Stenglein <dave@missingmass.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
art = "^6.5"
google-api-python-client = "^2.0.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.8.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
